# tp_git

./: .gitignore  README.md  books.db  pyproject.toml
app/: dependencies.py  main.py
app/controller/: book_controllers.py
app/dao/: book_dao.py
app/db/: database.py  init_db.py
app/dto/: book_dto.py
app/models/: book_models.py
app/services/: book_services.py
